# sdl3-car-dashboard

./: .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  helloImage.cpp  helloLoop.cpp
include/core/: Application.hpp  InputHandler.hpp  Renderer.hpp
include/dashboard/: SpeedGauge.hpp
include/model/: CarState.hpp
src/: CMakeLists.txt  helloCallback.cpp  helloImage.cpp  main.cpp
src/core/: Application.cpp  InputHandler.cpp  Renderer.cpp
src/dashboard/: SpeedGauge.cpp
